<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_demo.MainContainFragment">

    <com.app.func.textview_view.NoneSpaceTextView
        android:id="@+id/id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_20dp"
        android:background="#FFFF00FF"
        android:text="6ms jkÖÄ"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <com.app.func.view.all_demo.SmileyView
        android:id="@+id/smileyView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_64dp"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_value" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/smileyView"
        app:layout_constraintVertical_bias="0.95">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/home"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12dp"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/btnHome"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/btnSignIn"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnGotoRecyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/recyclerView"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnHome" />

        <Button
            android:id="@+id/btnProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/profile"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/btnGotoRecyclerView"
            app:layout_constraintTop_toBottomOf="@id/btnHome" />

        <Button
            android:id="@+id/viewPager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/view_pager"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/btnProfile"
            app:layout_constraintTop_toBottomOf="@id/btnHome" />

        <Button
            android:id="@+id/btnRoomWithRx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/room_rx_mvvm"
            android:textAllCaps="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGotoRecyclerView" />

        <Button
            android:id="@+id/btnRoomCoroutines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:text="@string/room_coroutines"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/btnRoomWithRx"
            app:layout_constraintTop_toBottomOf="@id/btnProfile" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>