<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".rx_function.RxFunctionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeSeekbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120dp"
            android:layout_marginTop="@dimen/_32dp"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/marker"
                layout="@layout/marker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/v"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:visibility="gone"
                tools:visibility="visible" />

            <View
                android:id="@+id/v"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_above="@id/sb" />

            <SeekBar
                android:id="@+id/sb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="@dimen/_10dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:max="100" />
        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearListButtons1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16dp"
            android:layout_marginTop="@dimen/_32dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/relativeSeekbar">

            <Button
                android:id="@+id/btnSimpleRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/simple"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnMapRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/map"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/btnSimpleRx"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnZipRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/zip"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/btnMapRx"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnTimeRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timer"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnSimpleRx" />

            <Button
                android:id="@+id/btnFilterRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/filter"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/btnTimeRx"
                app:layout_constraintTop_toBottomOf="@id/btnMapRx" />

            <Button
                android:id="@+id/btnConcatRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/concat"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/btnFilterRx"
                app:layout_constraintTop_toBottomOf="@id/btnMapRx" />

            <Button
                android:id="@+id/btnMergeRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/merge"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnTimeRx" />

            <Button
                android:id="@+id/btnDelayRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/delay"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/btnMergeRx"
                app:layout_constraintTop_toBottomOf="@id/btnFilterRx" />

            <Button
                android:id="@+id/btnSearchRx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@id/btnDelayRx"
                app:layout_constraintTop_toBottomOf="@id/btnConcatRx" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginBottom="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearListButtons1">

            <Button
                android:id="@+id/btnForecast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:text="Weather"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>